welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: ')' expected but '.' found.
	for (i<- to num.length-1){
                       ^island:13: error: illegal start of simple expression
}
^