welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var niveaux = 0
	var c = num(0)
	for (i<- to num.length-1){
		if (num(i)> c) {
			niveaux = niveaux +1
			c = num(i)
		} else {
			c=num(i)
		}
	}
	niveaux
}
